--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <hr>
-    </header>
+    <div id="header">
+        <div class="container"></div>
+        <nav>
+            <img src="image" alt="logo">
+            <ul class="nav">
+                <li class="nav-item "><a class="nav-link  text-light"  href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link  text-light" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link  text-light" href="#">Projects</a></li>
+                <li class="nav-item"><a class="nav-link  text-light" href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 
 </body>
 </html>
