--- a/index.html
+++ b/index.html
@@ -3,23 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css"> -->
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">
-        <div class="container"></div>
-        <nav>
-            <img src="image" alt="logo">
-            <ul class="nav">
-                <li class="nav-item "><a class="nav-link  text-light"  href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link  text-light" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link  text-light" href="#">Projects</a></li>
-                <li class="nav-item"><a class="nav-link  text-light" href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <img src="image" class="logo" alt="logo">
+                <ul>
+                    <li ><a href="#">Home</a></li>
+                    <li ><a href="#About">About</a></li>
+                    <li ><a href="#">Projects</a></li>
+                    <li ><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="header-text">
+                <p>3rd Year B-TECH AI&DS</p>
+                <h1>hi, I'm <span style="color: #ff9100;"> Dharun</span></h1>
+            </div>
+        </div>
+    </div>
+<!--about-->
+    <div id="About">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="img/MyPhoto.jpg" alt="">
+
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam dicta enim quae repellat. Voluptates voluptatibus deleniti enim error velit facilis eaque aut adipisci suscipit numquam? Aspernatur commodi iusto iste est!</P>
+                    
+                    <div class="tab-titles">
+                        <p class="tab-links active-link">Education</p>
+                        <p class="tab-links">Intenship</p>
+                        <p class="tab-links">Skills</p>
+                    </div>
+                    <div class="tab contents">
+                        <ul>
+                            <li><span>hjacjv</span><br>hsjvjchjv</li>
+                            <li><span>hjacjv</span><br>hsjvjchjv</li>
+                            <li><span>hjacjv</span><br>hsjvjchjv</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </body>
