--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css"> -->
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,6 +13,7 @@
                 <img src="image" class="logo" alt="logo">
                 <ul>
                     <li ><a href="#">Home</a></li>
+                    
                     <li ><a href="#About">About</a></li>
                     <li ><a href="#">Projects</a></li>
                     <li ><a href="#">Contact</a></li>
@@ -36,25 +35,41 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam dicta enim quae repellat. Voluptates voluptatibus deleniti enim error velit facilis eaque aut adipisci suscipit numquam? Aspernatur commodi iusto iste est!</P>
+                    <br>
+                    <P>"I am Dharun from Karur, a dedicated and driven individual pursuing a B.Tech in Artificial Intelligence and Data Science, with a strong passion for technology and innovation."</P>
                     
                     <div class="tab-titles">
-                        <p class="tab-links active-link">Education</p>
-                        <p class="tab-links">Intenship</p>
-                        <p class="tab-links">Skills</p>
+                        <p class="tab-links active-link" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('internship')" >Internship</p>
                     </div>
-                    <div class="tab contents">
+                    <div class="tab-contents active-tab" id="education">
                         <ul>
-                            <li><span>hjacjv</span><br>hsjvjchjv</li>
-                            <li><span>hjacjv</span><br>hsjvjchjv</li>
-                            <li><span>hjacjv</span><br>hsjvjchjv</li>
+                            <li><span>SSLC (2019 - 2020) </span><br>Saraswathy Vidyalaya Matric High School, Lalapet, Karur <br> <span style="color: red;">79.2%</span> </li>
+                            <li><span>HSC (2021 - 2022)</span><br>Sri Kalaimagal Matric Hr Sec School, Kulithalai, Karur <br><span style="color: red;">69.16%</span></li>
+                            <li><span>Bachelor Degree 2022 - Pursuing</span><br>Rathinam Technical Campus <br><span style="color: red;">7.67 CGPA Till 5th Sem </span></li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="skills">
+                        <ul>
+                            <li><span>JAVA</span><br></li>
+                            <li><span>HTML</span><br></li>
+                            <li><span>CSS</span><br></li>
+                            <li><span>JAVA SCRIPT</span><br></li>
+                            <li><span>BOOTSTRAP</span><br></li>
+                            <li><span>SQL</span></li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="internship">
+                        <ul>
+                            <li><span>Python Full Stack Development</span><br>Cloudswan Solution, Coimbatore, Tamilnadu</li>
+                            <li><span>Software Testing </span><br>Meark Enterprise Private Limited, Coimbatore, Tamilnadu</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
