add project file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </ul>
             </nav>
             <div class="header-text">
-                <p>3rd Year B-TECH AI&DS</p>
-                <h1>hi, I'm <span style="color: #ff9100;"> Dharun</span></h1>
+                <p>Hello There</p>
+                <h1>I'm <span style="color: #ff9100;"> Dharun</span></h1>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <br>
+                    <hr><br>
                     <P>"I am Dharun from Karur, a dedicated and driven individual pursuing a B.Tech in Artificial Intelligence and Data Science, with a strong passion for technology and innovation."</P>
                     
                     <div class="tab-titles">
@@ -45,9 +45,9 @@
                     </div>
                     <div class="tab-contents active-tab" id="education">
                         <ul>
-                            <li><span>SSLC (2019 - 2020) </span><br>Saraswathy Vidyalaya Matric High School, Lalapet, Karur <br> <span style="color: red;">79.2%</span> </li>
-                            <li><span>HSC (2021 - 2022)</span><br>Sri Kalaimagal Matric Hr Sec School, Kulithalai, Karur <br><span style="color: red;">69.16%</span></li>
-                            <li><span>Bachelor Degree 2022 - Pursuing</span><br>Rathinam Technical Campus <br><span style="color: red;">7.67 CGPA Till 5th Sem </span></li>
+                            <li><span>SSLC (2019 - 2020) </span><br>Saraswathy Vidyalaya Matric High School, Lalapet, Karur <br></li>
+                            <li><span>HSC (2021 - 2022)</span><br>Sri Kalaimagal Matric Hr Sec School, Kulithalai, Karur <br></li>
+                            <li><span>Bachelor Degree 2022 - Pursuing</span><br>Rathinam Technical Campus <br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="skills">
@@ -62,7 +62,7 @@
                     </div>
                     <div class="tab-contents" id="internship">
                         <ul>
-                            <li><span>Python Full Stack Development</span><br>Cloudswan Solution, Coimbatore, Tamilnadu</li>
+                            <li><span>Python Full Stack Development</span><br>Cloudswan Solution, Coimbatore, Tamilnadu <br><br></li>
                             <li><span>Software Testing </span><br>Meark Enterprise Private Limited, Coimbatore, Tamilnadu</li>
                         </ul>
                     </div>
@@ -70,6 +70,8 @@
             </div>
         </div>
     </div>
+<!--project-->
+<div class="project"></div>
     <script src="script.js"></script>
 </body>
 </html>
